<resources>
    <string name="app_name">Espresso Test Demo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pressure">Pressure Display</string>
    <string name="temperature">Temperature Display</string>
    <string name="unsubscribe">UNSUBSCRIBE</string>
    <string name="get_temperature">GET TEMPERATURE</string>
    <string name="get_pressure">GET PRESSURE</string>
    <string name="unsubscribed">Successfully unsubscribed</string>
    <string name="enter_city">Enter city name in case your device doesn\'t support.</string>
</resources>
